[package]
name = "injex"
version = "0.2.0"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mordragt/injex.git"
description = "Gives users the possibility to inject into and manipulate processes"
readme = "README.md"
keywords = ["injection", "dynamic-library", "memory", "shared-library", "loader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
dynasm = "1.2.3"
dynasmrt = "1.2.3"
procfs = "0.12.0"
object = "0.28.3"
hex = "0.4"
nix = "0.23.1"

[dev-dependencies]
clap = {version="3.1.8",features = [ "derive" ]}
